--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!-- contacts -->
     <header>
-      <a href="">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href=""></a>Studio</li>
           <li><a href=""></a>Portfolio</li>
@@ -18,71 +18,77 @@
         </ul>
       </nav>
       <address>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
+    <!-- About company -->
     <main>
-      <!-- About company -->
       <section>
-        <h1>
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
+      </section>
+      <section>
         <ul>
-          <li>Strategy</li>
           <li>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
-        </ul>
-        <ul>
-          <li>Punctuality</li>
           <li>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
-        </ul>
-        <ul>
-          <li>Diligence</li>
-          <li>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </li>
-        </ul>
-        <ul>
-          <li>Technologies</li>
-          <li>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </li>
-        </ul>
 
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
         <h2>What are we doing</h2>
         <ul>
           <li>
             <a href=""
               ><img
-                src="/Images/Rectangle71.jpg"
+                src="/images/Rectangle71.jpg"
                 alt="computer"
-                style="width: 360px; height: 300px"
+                style="width: 360px"
             /></a>
           </li>
           <li>
             <a href=""
               ><img
-                src="/Images/Rectangle72.jpg"
+                src="/images/Rectangle72.jpg"
                 alt="mobile phones"
-                style="width: 360px; height: 300px"
+                style="width: 360px"
             /></a>
           </li>
           <li>
             <a href=""
               ><img
-                src="/Images/Rectangle73.jpg"
+                src="/images/Rectangle73.jpg"
                 alt="mobile phone in hand"
-                style="width: 360px; height: 300px"
+                style="width: 360px"
             /></a>
           </li>
         </ul>
@@ -93,55 +99,49 @@
         <ul>
           <li>
             <img
-              src="/Images/photo1.jpg"
+              src="/images/photo1.jpg"
               alt="photo marka"
-              style="width: 264px; height: 260px"
+              style="width: 264px"
             />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
-          <li>Mark Guerrero</li>
-          <li>Product Designer</li>
-        </ul>
-        <ul>
           <li>
             <img
-              src="/Images/photo2.jpg"
+              src="/images/photo2.jpg"
               alt="photo toma"
-              style="width: 264px; height: 260px"
+              style="width: 264px"
             />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
-          <li>Tom Ford</li>
-          <li>Frontend Developer</li>
-        </ul>
-        <ul>
+
           <li>
             <img
-              src="/Images/photo3.jpg"
+              src="/images/photo3.jpg"
               alt="photo camilii"
-              style="width: 264px; height: 260px"
+              style="width: 264px"
             />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
-          <li>Camila Garcia</li>
-          <li>Marketing</li>
-        </ul>
-        <ul>
           <li>
             <img
-              src="/Images/photo4.jpg"
+              src="/images/photo4.jpg"
               alt="photo daniela"
-              style="width: 264px; height: 260px"
+              style="width: 264px"
             />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
-          <li>Daniel Wilson</li>
-          <li>UI Designer</li>
         </ul>
       </section>
-      <!-- basement -->
     </main>
+    <!-- basement -->
     <footer>
-      <a href="">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
