--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href=""></a>Studio</li>
-          <li><a href=""></a>Portfolio</li>
-          <li><a href=""></a>Contacts</li>
+          <li><a href="Studio"></a>Studio</li>
+          <li><a href="Portfolio"></a>Portfolio</li>
+          <li><a href="Contacts"></a>Contacts</li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -31,6 +31,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -70,7 +71,7 @@
           <li>
             <a href=""
               ><img
-                src="/images/Rectangle71.jpg"
+                src="./images/rectangle71.jpg"
                 alt="computer"
                 style="width: 360px"
             /></a>
@@ -78,7 +79,7 @@
           <li>
             <a href=""
               ><img
-                src="/images/Rectangle72.jpg"
+                src="./images/rectangle72.jpg"
                 alt="mobile phones"
                 style="width: 360px"
             /></a>
@@ -86,7 +87,7 @@
           <li>
             <a href=""
               ><img
-                src="/images/Rectangle73.jpg"
+                src="./images/rectangle73.jpg"
                 alt="mobile phone in hand"
                 style="width: 360px"
             /></a>
@@ -99,7 +100,7 @@
         <ul>
           <li>
             <img
-              src="/images/photo1.jpg"
+              src="./images/photo1.jpg"
               alt="photo marka"
               style="width: 264px"
             />
@@ -108,7 +109,7 @@
           </li>
           <li>
             <img
-              src="/images/photo2.jpg"
+              src="./images/photo2.jpg"
               alt="photo toma"
               style="width: 264px"
             />
@@ -118,7 +119,7 @@
 
           <li>
             <img
-              src="/images/photo3.jpg"
+              src="./images/photo3.jpg"
               alt="photo camilii"
               style="width: 264px"
             />
@@ -127,7 +128,7 @@
           </li>
           <li>
             <img
-              src="/images/photo4.jpg"
+              src="./images/photo4.jpg"
               alt="photo daniela"
               style="width: 264px"
             />
@@ -139,7 +140,7 @@
     </main>
     <!-- basement -->
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
