--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="Studio"></a>Studio</li>
-          <li><a href="Portfolio"></a>Portfolio</li>
-          <li><a href="Contacts"></a>Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -69,28 +69,21 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <a href=""
-              ><img
-                src="./images/rectangle71.jpg"
-                alt="computer"
-                style="width: 360px"
-            /></a>
+            <img src="./images/rectangle71.jpg" width="360" alt="computer" />
           </li>
           <li>
-            <a href=""
-              ><img
-                src="./images/rectangle72.jpg"
-                alt="mobile phones"
-                style="width: 360px"
-            /></a>
+            <img
+              src="./images/rectangle72.jpg"
+              width="360"
+              alt="mobile phones"
+            />
           </li>
           <li>
-            <a href=""
-              ><img
-                src="./images/rectangle73.jpg"
-                alt="mobile phone in hand"
-                style="width: 360px"
-            /></a>
+            <img
+              src="./images/rectangle73.jpg"
+              width="360"
+              alt="mobile phone in hand"
+            />
           </li>
         </ul>
       </section>
@@ -99,39 +92,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/photo1.jpg"
-              alt="photo marka"
-              style="width: 264px"
-            />
+            <img src="./images/photo1.jpg" width="264" alt="photo marka" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/photo2.jpg"
-              alt="photo toma"
-              style="width: 264px"
-            />
+            <img src="./images/photo2.jpg" width="264" alt="photo toma" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img
-              src="./images/photo3.jpg"
-              alt="photo camilii"
-              style="width: 264px"
-            />
+            <img src="./images/photo3.jpg" width="264" alt="photo camilii" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/photo4.jpg"
-              alt="photo daniela"
-              style="width: 264px"
-            />
+            <img src="./images/photo4.jpg" width="264" alt="photo daniela" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
