--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>Development</h2>
+        <h2>About company</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
